--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-aiohttp==1.0.5
-aiosip==0.1.0
+#aiohttp==1.0.5
+#aiosip==0.1.0
 APScheduler==3.2.0
-async-timeout==1.1.0
+#async-timeout==1.1.0
 blinker==1.4
 chardet==2.3.0
 click==6.6
 Flask==0.11.1
 Flask-Gravatar==0.4.2
-Flask-Login==0.4.0
-Flask-Mail==0.9.1
+#Flask-Login==0.4.0
+#Flask-Mail==0.9.1
 flask-mongoengine==0.7.5
-Flask-Principal==0.4.0
-Flask-Security==1.7.5
-Flask-SocketIO== 1.0b1
-Flask-WTF==0.13.1
-gevent==1.1.2
+#Flask-Principal==0.4.0
+#Flask-Security==1.7.5
+Flask-SocketIO==1.0b1
+#Flask-WTF==0.13.1
+gevent==1.2.1
 gi==1.2
 greenlet==0.4.10
 itsdangerous==0.24
@@ -22,16 +22,16 @@ Jinja2==2.8
 MarkupSafe==0.23
 mongoengine==0.10.6
 multidict==2.1.2
-p2psip==2.2.8
+#p2psip==2.2.8
 passlib==1.6.5
 pymongo==3.3.1
 pyserial==3.2.1
 python-engineio==1.0.3
 python-socketio==1.6.0
-pytz==2016.7
+#pytz==2016.7
 requests==2.11.1
 six==1.10.0
-stats==0.1.2a0
+#stats==0.1.2a0
 tzlocal==1.3
 Werkzeug==0.11.11
 WTForms==2.1
